recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: value update is not a member of Boolean
estCrayonBaisse()=vrai
^Spiral:4: error: not found: value crayonBaisse
	if( crayonBaisse=false){
            ^