recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(n:Int, t:Int, l:Int, i:Int)    {
estCrayonBaisse()=vrai
	if( crayonBaisse=false){
		avance(l);
		gauche(t);
		spiral(n-1,t,l+i, i);
	}
}
